--- a/app/src/main/res/layout/activity_ident_result.xml
+++ b/app/src/main/res/layout/activity_ident_result.xml
@@ -1,5 +1,3 @@
-
-
 <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -28,8 +26,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
@@ -46,18 +43,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-
-                >
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
                     android:id="@+id/imageViewSource"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
 
+                    android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.7"
-                    android:layout_width="wrap_content" />
+                    app:layout_collapseParallaxMultiplier="0.7" />
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -65,51 +60,51 @@
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-                    />
+
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
+        <!--
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
 
+                        </android.support.design.widget.TextInputLayout>
 
-                </android.support.design.widget.TextInputLayout>
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:id="@+id/imageViewFound"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                         <ImageView
+                             android:id="@+id/imageViewFound"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
 
-                        android:layout_below="@id/imageViewSource"/>
-
-
-                </android.support.design.widget.TextInputLayout>
+                             android:layout_below="@id/imageViewSource"/>
 
 
-
-            </LinearLayout>
-
-        </android.support.v4.widget.NestedScrollView>
+                        </android.support.design.widget.TextInputLayout>
 
 
+                    </LinearLayout>
+
+                </android.support.v4.widget.NestedScrollView>
+            -->
 
     </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.DrawerLayout>
