--- a/app/src/main/res/layout/activity_ident_result.xml
+++ b/app/src/main/res/layout/activity_ident_result.xml
@@ -26,7 +26,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
@@ -43,14 +44,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_margin_start"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
-                    android:id="@+id/imageViewSource"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitCenter"
+                    android:id="@+id/imageViewSource"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7" />
 
@@ -60,51 +61,40 @@
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
-
+                    />
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
         </android.support.design.widget.AppBarLayout>
 
-
-        <!--
-                <android.support.v4.widget.NestedScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-                        </android.support.design.widget.TextInputLayout>
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                         <ImageView
-                             android:id="@+id/imageViewFound"
-                             android:layout_width="wrap_content"
-                             android:layout_height="wrap_content"
-
-                             android:layout_below="@id/imageViewSource"/>
 
 
-                        </android.support.design.widget.TextInputLayout>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/listview_score"
+                android:layout_margin="30dp" />
+
+            <!--   <android.support.v7.widget.RecyclerView
+                   android:id="@+id/recyclerview"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:layout_below="@+id/cardview2"
+                   android:clipToPadding="false"
+                   android:paddingTop="0dp"/>  -->
 
 
-                    </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
-                </android.support.v4.widget.NestedScrollView>
-            -->
+
 
     </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.DrawerLayout>
