--- a/app/src/main/res/layout/activity_ident_result.xml
+++ b/app/src/main/res/layout/activity_ident_result.xml
@@ -1,4 +1,4 @@
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -8,26 +8,48 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".IdentResultActivity">
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/linearLayout1"
+        android:weightSum="1">
   <ImageView
       android:id="@+id/imageViewSource"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="5dip"
-      android:layout_marginTop="5dip" />
+      android:scaleType="fitCenter"
+      android:layout_width="368dp"
+      android:layout_height="230dp"
+      app:layout_collapseMode="parallax"
+      app:layout_collapseParallaxMultiplier="0.7"
+      />
+</LinearLayout>
 
-  <ImageView
-      android:id="@+id/imageViewFound"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
 
-      android:layout_below="@id/imageViewSource"/>  -->
+    <ListView
+        android:layout_alignEnd="@+id/linearLayout1"
+        android:layout_alignParentStart="true"
+        android:layout_width="wrap_content"
+        android:layout_height="262dp"
+        android:id="@+id/listview_score"
+        android:layout_gravity="bottom"
+        android:layout_weight="0.41"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+
+
+
+
+
+    </RelativeLayout>
+
+    <!--
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
@@ -61,9 +83,7 @@
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-
-                    />
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -71,30 +91,31 @@
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
 
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/listview_score"
-                android:layout_margin="30dp" />
-
-            <!--   <android.support.v7.widget.RecyclerView
+              <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/cardview2"
                    android:clipToPadding="false"
-                   android:paddingTop="0dp"/>  -->
-
+                   android:paddingTop="0dp"/>
 
         </android.support.v4.widget.NestedScrollView>
-
-
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="220dp"
+                android:id="@+id/listview_score"
+                android:layout_margin="30dp"
+                android:layout_gravity="bottom" />
+        </LinearLayout>
     </android.support.design.widget.CoordinatorLayout>
+
 </android.support.v4.widget.DrawerLayout>
+-->
