--- a/app/src/main/res/layout/activity_search_image.xml
+++ b/app/src/main/res/layout/activity_search_image.xml
@@ -15,20 +15,20 @@
         android:layout_height="fill_parent"
         android:id="@+id/imageView"
         android:layout_gravity="center"
-        android:layout_above="@+id/button_sendSearch"
-       />
+        android:layout_alignParentTop="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/search_button_image"
         android:id="@+id/button_sendSearch"
-        android:text="@string/sorgula_button"
-        android:layout_marginLeft="10px"
+
         android:onClick="makeIdentify"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/button_enrollImage"
-        android:layout_marginEnd="35dp" />
+        android:padding="0dip"
+        android:scaleType="fitStart"
+        android:layout_marginLeft="90dp"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignParentStart="true" />
 
     <!--    <Button
         android:layout_width="wrap_content"
@@ -45,13 +45,14 @@
         android:layout_height="wrap_content"
         android:src="@drawable/save_button_image"
         android:id="@+id/button_enrollImage"
-        android:text="@string/kaydet_button"
         android:scaleType="fitStart"
-        android:layout_marginRight="10px"
+        android:padding="0dip"
+
         android:onClick="makeEnrollment"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_marginEnd="111dp" />
+        android:layout_marginRight="100dp"
+        android:layout_marginEnd="72dp"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignParentEnd="true" />
 
 
     <!--  <Button
@@ -62,6 +63,6 @@
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:layout_toRightOf="@id/button_sendSearch"
-          android:onClick="makeEnrollment"/>   -->
+          android:onClick="makeEnrollment"/> -->
 
 </RelativeLayout>
