--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,11 @@
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/search_button_text"
-       android:textSize="9sp"
+       android:textColor="@color/papilonColor"
+       android:textSize="15sp"
        android:id="@+id/button_search"
        android:background="@drawable/circle"
-       android:padding="30dp"
+       android:padding="3dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
